--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
@@ -43,6 +44,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "ts-fsrs": "^5.2.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
