feat: Phase 3完了 - バックアップ機能、RevenueCat課金、プライバシーポリシー実装
- データバックアップ機能
  - backupService.ts: JSON Export/Import機能
  - settings.tsx: 設定画面とデータ管理UI
  - expo-sharing, expo-document-picker統合

- RevenueCat課金システム
  - subscriptionStore.ts: Zustand統合
  - paywall.tsx: Paywallスクリーン
  - Book登録制限ロジック (Free: 3冊, Pro: 無制限)
  - react-native-purchases導入

- プライバシーポリシー対応
  - app.json: カメラストレージ権限説明追加
  - privacy-policy.html: プライバシーポリシーページ作成
  - WebBrowser統合

- その他
  - README.md: 全機能ドキュメント化
  - Settingsタブ追加
  - Drizzle ORM設定完備

--- a/app.json
+++ b/app.json
@@ -9,7 +9,19 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "学習カードの復習時に、間違えた問題の写真メモを撮影するために使用します。",
+        "NSPhotoLibraryUsageDescription": "学習記録の写真を保存するために使用します。"
+      }
+    },
+    "android": {
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "package": "com.chiritsumo.app"
     },
     "web": {
       "bundler": "metro",
