feat(backup): 自動クラウドバックアップ機能の実装
【iOS対応】
- iCloudBackup.ts: iCloud Document Storage統合
- Paths.documentディレクトリでのバックアップ保存
- 最終バックアップ日時の取得機能

【スケジューラー】
- autoBackupScheduler.ts: バックグラウンドタスク実装
- expo-background-fetch/expo-task-managerを使用
- 24時間ごとの自動バックアップ
- 手動バックアップ機能

【Settings画面】
- 自動バックアップトグル追加（Pro Plan限定）
- 最終バックアップ日時の表示
- 今すぐバックアップボタン（Pro Plan限定）
- Pro Planチェック機能

【設定】
- app.json: iCloud Storage有効化
- bundleIdentifier設定
- i18n: 自動バックアップ関連の翻訳追加

--- a/app.json
+++ b/app.json
@@ -10,6 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.chiritsumo.app",
+      "usesIcloudStorage": true,
       "infoPlist": {
         "NSCameraUsageDescription": "学習カードの復習時に、間違えた問題の写真メモを撮影するために使用します。",
         "NSPhotoLibraryUsageDescription": "学習記録の写真を保存するために使用します。"
