--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "drizzle-orm": "^0.44.7",
     "expo": "^54.0.10",
+    "expo-background-fetch": "~14.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
@@ -36,6 +37,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "~14.0.8",
     "expo-web-browser": "~15.0.7",
     "i18n-js": "^4.5.1",
     "lucide-react-native": "^0.544.0",
