--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@robinbobin/react-native-google-drive-api-wrapper": "^2.2.4",
     "@supabase/supabase-js": "^2.58.0",
     "drizzle-orm": "^0.44.7",
     "expo": "^54.0.10",
