--- a/app.json
+++ b/app.json
@@ -11,7 +11,6 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.chiritsumo.app",
-      
       "infoPlist": {
         "NSCameraUsageDescription": "学習カードの復習時に、間違えた問題の写真メモを撮影するために使用します。",
         "NSPhotoLibraryUsageDescription": "学習記録の写真を保存するために使用します。"
@@ -34,7 +33,8 @@
       "expo-router",
       "expo-font",
       "expo-web-browser",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true
