--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "ts-fsrs": "^5.2.3",
     "zustand": "^5.0.8"
   },
