--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
       "expo-font",
       "expo-web-browser",
       "expo-secure-store",
-      "expo-barcode-scanner"
+      "expo-barcode-scanner",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
