chore: tsconfig.jsonでビルドノイズを抑制
- skipLibCheck: trueを追加

- node_modulesとapp/coreをexclude

- 存在しないファイルの誤検出エラーを回避

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": "./",
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["*"],
       "@core/*": ["core/*"]
@@ -14,5 +15,9 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "app/core"
   ]
 }
