--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
@@ -19,32 +19,32 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
     "drizzle-orm": "^0.44.7",
-    "expo": "^54.0.10",
+    "expo": "~54.0.25",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~15.0.7",
-    "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-camera": "~17.0.9",
+    "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.19",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
     "i18n-js": "^4.5.1",
     "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-purchases": "^9.6.7",
