--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "ts-fsrs": "^5.2.3",
-    "zustand": "^5.0.8",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
