--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "i18n-js": "^4.5.1",
+    "jszip": "^3.10.1",
     "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jszip": "^3.4.0",
     "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "drizzle-kit": "^0.31.7",
