chore: devサーバーを常時トンネル起動に変更（--tunnel）\n\n- npm run dev で tunnel 強制\n- npm run dev:clear でキャッシュクリア+tunnel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "expo start",
+    "dev": "expo start --tunnel",
+    "dev:clear": "expo start --clear --tunnel",
     "build:web": "expo export --platform web --output-dir ./dist",
     "build": "expo export --platform web --output-dir ./dist",
     "lint": "expo lint",
